Creacion otras paginas e inclusion textos

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
                     <div class="col image">
 
-                        <a href="./resultadosEntrevistas.html">
+                        <a href="./resultadosSemana.html">
                             <img src="./Assets/SemanaLogo.png" class="image" alt="...">
                         </a>
 
@@ -199,7 +199,7 @@
                     </div>
                     <div class="col image">
 
-                        <a href="./resultadosEntrevistas.html">
+                        <a href="./conclusiones.html">
                             <img src="./Assets/Libros.png" class="image" alt="...">
                         </a>
 
