--- a/conclusiones.html
+++ b/conclusiones.html
@@ -178,7 +178,7 @@
                             <br>
                             <span> paola-moralesb@javeriana.edu.co </span>
                             <br>
-                            <span> las elecciones presidenciales de Colombia 2022 </span>
+                            <span> Trabajo de Grado para optar por el título de Comunicador Social </span>
                             <br>
                             <span> 2023 </span>
 
