--- a/resultadosSemana.html
+++ b/resultadosSemana.html
@@ -8,23 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=EB+Garamond" />
 </head>
 
 <body>
 
-    <div class="container relative center">
-        <!-- Content here -->
-        <header>
-            <div>
-                <img src="./Assets/headImageWithText.png" alt="Petro y Rodolfo" class="img-fluid"
-                    style="max-width: 100%; height: auto;">
+    <div class="row">
+        <div class=" container relative text-center">
+            <!-- Content here -->
+            <header>
+                    <img src="./Assets/SemanaLogo.png" alt="Petro y Rodolfo" class="img-fluid"
+                        style="width: 100%; height: auto; text-align: center; ">
 
 
 
-            </div>
 
 
-        </header>
+            </header>
+        </div>
     </div>
 
 
@@ -84,24 +85,32 @@
 
 
 
-    <div class="container text-center">
+    <div class="container text-center text-font">
         <!-- Content here -->
         <footer>
             <div class="row">
-                <div class="col">
-                    <span> El silencio en campaña: entre la estrategia y el vacío mediático. Una mirada a <span>
-                            <span> las elecciones presidenciales de Colombia 2022 </span>
-                            <br>
-                            <span> Paola Catalina Morales Buitrago </span>
-                            <br>
-                            <span> paola-moralesb@javeriana.edu.co </span>
-                            <br>
-                            <span> las elecciones presidenciales de Colombia 2022 </span>
-                            <br>
-                            <span> 2023 </span>
+                <div class="col-3">
+                </div>
+                <div class="col footer-font ">
+                    <span> El silencio en campaña: entre la estrategia y el vacío mediático. Una mirada a </span>
+                    <span> las elecciones presidenciales de Colombia 2022 </span>
+                    <br>
+                    <br>
+                    <span> Paola Catalina Morales Buitrago </span>
+                    <br>
+                    <br>
+                    <span> paola-moralesb@javeriana.edu.co </span>
+                    <br>
+                    <br>
+                    <span> Trabajo de Grado para optar por el título de Comunicador Social </span>
+                    <br>
+                    <br>
+                    <span> 2023 </span>
 
 
 
+                </div>
+                <div class="col-3">
                 </div>
             </div>
 
