--- a/resultadosSemana.html
+++ b/resultadosSemana.html
@@ -7,7 +7,7 @@
     <title>El silencio en campaña: entre la estrategia y el vacío mediático</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="./style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=EB+Garamond" />
 </head>
 
@@ -17,19 +17,15 @@
         <div class=" container relative text-center">
             <!-- Content here -->
             <header>
-                    <img src="./Assets/SemanaLogo.png" alt="Petro y Rodolfo" class="img-fluid"
+                    <img src="./Assets/Semana header.png" alt="Petro y Rodolfo" class="img-fluid"
                         style="width: 100%; height: auto; text-align: center; ">
-
-
-
-
 
             </header>
         </div>
     </div>
 
 
-    <div class="container relative ">
+    <div class="container relative body-borders">
         <!-- Content here -->
 
         <div class="row row-space">
@@ -44,7 +40,7 @@
             <div class="col">
 
                 <div class="row row-space">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste porro quis impedit aspernatur minima ab enim vero necessitatibus accusamus dolorum totam sit facere, laborum nesciunt maxime animi corrupti, nobis esse.
+                    <p class="text-font"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste porro quis impedit aspernatur minima ab enim vero necessitatibus accusamus dolorum totam sit facere, laborum nesciunt maxime animi corrupti, nobis esse.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate corporis, eos nobis saepe maxime libero sapiente tempora omnis alias excepturi ex recusandae, aspernatur dolore. Eveniet, id? Neque, facilis hic? </p>
                 </div>
 
@@ -59,7 +55,7 @@
         <div class="row row-space">
             <div class="col">
                 
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste porro quis impedit aspernatur minima ab enim vero necessitatibus accusamus dolorum totam sit facere, laborum nesciunt maxime animi corrupti, nobis esse.
+                <p class="text-font"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste porro quis impedit aspernatur minima ab enim vero necessitatibus accusamus dolorum totam sit facere, laborum nesciunt maxime animi corrupti, nobis esse.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate corporis, eos nobis saepe maxime libero sapiente tempora omnis alias excepturi ex recusandae, aspernatur dolore. Eveniet, id? Neque, facilis hic? </p>
             </div>
 
@@ -83,6 +79,26 @@
     </div>
 
 
+    <div class="row row-space">
+
+        <!-- <div class="col text-left"> -->
+
+        <div class="row row-space">
+            <div class="col image text-center">
+                <div class="container " style="  position: relative ;">
+                    <a href="./index.html">
+                        <img src="./Assets/headerImage.png" alt="Avatar" class="image" style="width:100%; text-align: center;">
+                        <div class="middle">
+                            <div class="text-image-button">Página Principal</div>
+
+                        </div>
+                    </a>
+                </div>
+
+            </div>         
+            
+        </div>
+    </div>
 
 
     <div class="container text-center text-font">
