--- a/resultadosEntrevistas.html
+++ b/resultadosEntrevistas.html
@@ -18,7 +18,7 @@
             <!-- Content here -->
             <header>
                     <img src="./Assets/Personas.png" alt="Petro y Rodolfo" class="img-fluid"
-                        style="width: 100%; height: auto; text-align: center; ">
+                        style="width: 100%; height: auto; text-align: center; opacity: 1;">
 
 
 
