Cambiando imagenes Semana letrero

--- a/resultadosSemana.html
+++ b/resultadosSemana.html
@@ -17,7 +17,7 @@
         <div class=" container relative text-center">
             <!-- Content here -->
             <header>
-                    <img src="./Assets/Semana header.png" alt="Petro y Rodolfo" class="img-fluid"
+                    <img src="./Assets/Semana_(Colombia)_logo.svg.png" alt="Petro y Rodolfo" class="img-fluid"
                         style="width: 100%; height: auto; text-align: center; ">
 
             </header>
