Cambiando imagenes Semana letrero

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class=" container relative text-center">
             <!-- Content here -->
             <header>
-                    <img src="./Assets/headImageWithText.png" alt="Petro y Rodolfo" class="img-fluid"
+                    <img src="./Assets/headerImageNueva.png" alt="Petro y Rodolfo" class="img-fluid"
                         style="width: 100%; height: auto; text-align: center; ">
 
 
@@ -164,7 +164,7 @@
 
                 <div class="container" style="  position: relative;">
                     <a href="./resultadosSemana.html">
-                        <img src="./Assets/SemanaLogo.png" class="image" alt="...">
+                        <img src="./Assets/SemanaLogoRojo.png" class="image" alt="...">
                         <div class="middle">
                             <div class="text-image-button">Resultados uso de tweets en artículos de Semana.com</div>
 
