Cambiando imagenes Semana letrero

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
 
     <div class="row">
-        <div class=" container relative text-center">
+        <div class=" container relative text-center"  style=" padding-right: 0%;">
             <!-- Content here -->
             <header>
                     <img src="./Assets/headerImageNuevaGris.png" alt="Petro y Rodolfo" class="img-fluid"
-                        style="width: 100%; height: auto; text-align: center; ">
+                        style="width: 100%; height: auto; text-align: center;">
 
 
 
@@ -34,7 +34,7 @@
     <div class="container relative ">
         <!-- Content here -->
         <div class="row row-space">
-            <div class="col-3">
+            <div class="col-2">
             </div>
             <div class="col text-left body-borders">
 
@@ -55,7 +55,7 @@
 
                 </p>
             </div>
-            <div class="col-3">
+            <div class="col-2">
 
             </div>
         </div>
@@ -63,14 +63,14 @@
 
 
         <div class="row row_space ">
-            <div class="col-3">
+            <div class="col-2">
             </div>
 
             <div class="col body-borders">
                 <div class="row">
                     <div class="col ">
-                        <img src="./Assets/pngHome.png" alt="Todo List Image" class="img-fluid"
-                            style="max-width: 100%; height: fit-content;">
+                        <img src="./Assets/pngHomeNuevo.png" alt="Todo List Image" class="img-fluid"
+                            style="max-width: 60%; height: fit-content;">
                     </div>
                     <div class="col text-left">
                         <br>
@@ -94,14 +94,14 @@
 
 
 
-            <div class="col-3">
+            <div class="col-2">
             </div>
 
         </div>
 
 
         <div class="row row-space">
-            <div class="col-3">
+            <div class="col-2">
             </div>
             <div class="col text-left body-borders">
 
@@ -128,7 +128,7 @@
                     estrategia y sus implicaciones en las dinámicas en las salas de redacción.
                 </p>
             </div>
-            <div class="col-3">
+            <div class="col-2">
 
             </div>
         </div>
