--- a/index.html
+++ b/index.html
@@ -38,22 +38,80 @@
             </div>
             <div class="col text-left body-borders">
 
-                <p class="text-font">El silencio ha sido utilizado frecuentemente como estrategia política y de
-                    comunicación por una
-                    diversidad de actores políticos,
-                    provocando distintos impactos en el acceso a la información de los votantes y la ciudadanía en
-                    general,
-                    así como en las coberturas periodísticas de las elecciones.
-                </p>
-                <br>
-                <p class="text-font">La presente investigación ahonda en el uso del silencio como estrategia de
-                    comunicación política en
-                    la segunda vuelta a la Presidencia
-                    de Colombia de 2022 por parte de los candidatos Gustavo Petro y Rodolfo Hernández, y las
-                    repercusiones de esa práctica en la cobertura
-                    que los periodistas hacen de las campañas electorales.
+                <div class="row" >
+                    <p class="text-font">El silencio ha sido utilizado frecuentemente como estrategia política y de
+                        comunicación por una
+                        diversidad de actores políticos,
+                        provocando distintos impactos en el acceso a la información de los votantes y la ciudadanía en
+                        general,
+                        así como en las coberturas periodísticas de las elecciones.
+                    </p>
+                    <br>
+                    <p class="text-font">La presente investigación ahonda en el uso del silencio como estrategia de
+                        comunicación política en
+                        la segunda vuelta a la Presidencia
+                        de Colombia de 2022 por parte de los candidatos Gustavo Petro y Rodolfo Hernández, y las
+                        repercusiones de esa práctica en la cobertura
+                        que los periodistas hacen de las campañas electorales.
+    
+                    </p>
 
+                </div>
+
+                <br><br><br>
+
+                
+
+
+                <div class="row" >
+                    <div class="col centered" style="display: flex; justify-content: center ;">
+
+                        <img src="./Assets/pngHomeNuevo.png" alt="Todo List Image" class="img-fluid"
+                            style="max-width: 60%; height: fit-content;">
+                    </div>
+                    <div class="col text-left">
+                        <br>
+                        <h5 class="title-font">Objetivo general</h5>
+                        <p class="text-font">Identificar las repercusiones en el ejercicio periodístico de la ausencia
+                            de los
+                            candidatos Gustavo Petro
+                            y Rodolfo Hernández en los debates televisivos durante la campaña a la Presidencia de
+                            Colombia de
+                            2022.
+                        </p>
+                        <br>
+
+
+
+                    </div>
+                </div>
+
+
+                <br><br><br>
+                <h5 class="title-font">Metodología</h5>
+                <p class="text-font">La investigación se desarrolló mediante el estudio de caso: el caso de Gustavo
+                    Petro y Rodolfo
+                    Hernández
+                    en los debates televisivos durante la campaña a la Presidencia de Colombia de 2022. Las técnicas de
+                    recolección de la información fueron dos.
                 </p>
+                <p class="text-font">Por un lado, un análisis de contenido de los artículos de Semana.com durante la
+                    segunda vuelta
+                    electoral
+                    con el fin de analizar cómo fue la producción de notas periodísticas sobre estos dos candidatos
+                    durante
+                    un periodo de tiempo en el que no hubo debates televisivos. Con ello se busca cuantificar la
+                    citación
+                    explícita de Twitter como fuente informativa en las informaciones políticas de Semana.com.
+                </p>
+                <p class="text-font">Por otro lado, se realizaron entrevistas a estrategas, asesores y periodistas sobre
+                    el uso del
+                    silencio como
+                    estrategia y sus implicaciones en las dinámicas en las salas de redacción.
+                </p>
+
+
+
             </div>
             <div class="col-2">
 
@@ -62,13 +120,14 @@
 
 
 
-        <div class="row row_space ">
+        <!-- <div class="row row_space ">
             <div class="col-2">
             </div>
 
             <div class="col body-borders">
-                <div class="row">
-                    <div class="col ">
+                <div class="row" >
+                    <div class="col centered" style="display: flex; justify-content: center ;">
+
                         <img src="./Assets/pngHomeNuevo.png" alt="Todo List Image" class="img-fluid"
                             style="max-width: 60%; height: fit-content;">
                     </div>
@@ -131,7 +190,7 @@
             <div class="col-2">
 
             </div>
-        </div>
+        </div> -->
     </div>
 
 
@@ -212,6 +271,7 @@
                     <br>
                     <br>
                     <span> 2023 </span>
+
 
 
 
