Ajuste botones Home

--- a/resultadosSemana.html
+++ b/resultadosSemana.html
@@ -89,8 +89,8 @@
         <div class="row row-space">
             <div class="col image text-center">
                 <div class="container " style="  position: relative ;">
-                    <a href="./index.html">
-                        <img src="./Assets/headerImage.png" alt="Avatar" class="image" style="width:100%; text-align: center;">
+                    <a href="./index.html" style="display: flex; justify-content: center ;">
+                        <img src="./Assets/headerImage.png" alt="Avatar" class="image" style="width:50%; text-align: center;">
                         <div class="middle">
                             <div class="text-image-button">Página Principal</div>
 
